Created the base class for running multiple simulations

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,6 +3,7 @@ project (rtsim)
 
 add_subdirectory (edf)
 add_subdirectory (accelerated)
+add_subdirectory (accelerated_full)
 add_subdirectory (rm)
 add_subdirectory (sporadic)
 add_subdirectory (cbserver)
