--- a/examples/accelerated_full/CMakeLists.txt
+++ b/examples/accelerated_full/CMakeLists.txt
@@ -2,7 +2,7 @@
 include(${CMAKE_CURRENT_DOURCE_DIR}../common_settings.txt)
 
 # Create the executable.
-add_executable(accelerated_full accelerated_full.cpp generator.cpp)
+add_executable(accelerated_full accelerated_full.cpp generator.cpp tinyxml/tinyxml2.cpp)
 
 # Indicate that the executable needs metasim and rtlib library.
 target_link_libraries( accelerated_full boost_system boost_filesystem rtlib ${metasim_LIBRARY})
