Created period breaks for each partition and periods are now handled with an exponential distribution

--- a/examples/accelerated_full/CMakeLists.txt
+++ b/examples/accelerated_full/CMakeLists.txt
@@ -3,6 +3,7 @@ include(${CMAKE_CURRENT_DOURCE_DIR}../common_settings.txt)
 
 # Create the executable.
 add_executable(accelerated_full accelerated_full.cpp generator.cpp builder.cpp tinyxml/tinyxml2.cpp)
+add_executable(standalone standalone.cpp generator.cpp)
 
 # Indicate that the executable needs metasim and rtlib library.
 target_link_libraries( accelerated_full boost_system boost_filesystem rtlib ${metasim_LIBRARY})
