--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required (VERSION 2.6)
 project (rtsim)
 
-add_subdirectory (edf)
-add_subdirectory (accelerated)
+#add_subdirectory (edf)
+#add_subdirectory (accelerated)
 add_subdirectory (accelerated_full)
-add_subdirectory (rm)
-add_subdirectory (sporadic)
-add_subdirectory (cbserver)
-add_subdirectory (grub)
+#add_subdirectory (rm)
+#add_subdirectory (sporadic)
+#add_subdirectory (cbserver)
+#add_subdirectory (grub)
 #add_subdirectory (suspend)
