Removed unused examples

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,7 +1,7 @@
-add_subdirectory (edf)
-add_subdirectory (rm)
-add_subdirectory (sporadic)
-add_subdirectory (cbserver)
-add_subdirectory (grub)
+#add_subdirectory (edf)
+#add_subdirectory (rm)
+#add_subdirectory (sporadic)
+#add_subdirectory (cbserver)
+#add_subdirectory (grub)
 add_subdirectory (energy)
 #add_subdirectory (suspend)
